--- a/khushaalsharma/public/index.html
+++ b/khushaalsharma/public/index.html
@@ -30,7 +30,8 @@
     
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
+    <!--DEVICON-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
